--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://i.pinimg.com/236x/a4/7c/48/a47c4855ad1dff7b071fb58e1f31862b.jpg"
         type="image/x-icon">
-    <link rel="stylesheet" href="/css/t.css">
+    <link rel="stylesheet" href="/t.css">
     <title>Буквы</title>
 </head>
 
